--- a/.github/workflows/connections_tests.yml
+++ b/.github/workflows/connections_tests.yml
@@ -80,6 +80,7 @@ jobs:
           - git+https://github.com/ansible/ansible.git@devel
         os:
           - vm: ubuntu-latest
+          - vm: ubuntu-20.04
           #- vm: ubuntu-16.04
           #- vm: macos-latest
         python-version:
@@ -165,9 +166,10 @@ jobs:
       matrix:
         ansible-version:
           - ansible<2.10
-          - git+https://github.com/ansible/ansible.git@devel
+          #- git+https://github.com/ansible/ansible.git@devel
         os:
-          - vm: ubuntu-latest
+          #- vm: ubuntu-latest
+          - vm: ubuntu-20.04
           #- vm: ubuntu-16.04
           #- vm: macos-latest
         python-version:
