Improve ports idempotency and support UDP

--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
@@ -24,11 +24,16 @@
     image: "{{ idem_image }}"
     name: idempotency
     state: present
-    ports:
-      - 7777:8080/tcp
-      - 127.0.0.1:8888:1929
-      - 127.0.0.1:5555:9000
     command: 1h
+    ports:
+      - "4444:4444/tcp"
+      - "1212:5555"
+      - "8888:19191/udp"
+      - "1900:1900/udp"
+      - "127.0.0.1:7671:7676/udp"
+      - "127.0.0.1:12122:8876/udp"
+      - "127.0.0.1:13122:8871/tcp"
+      - "127.0.0.1:43423:8872"
   register: test2
 
 - name: check test2
@@ -41,9 +46,14 @@
     state: present
     command: 1h
     ports:
-      - 7777:8080/tcp
-      - 127.0.0.1:8888:1929
-      - 127.0.0.1:5555:9000
+      - "4444:4444/tcp"
+      - "1212:5555"
+      - "8888:19191/udp"
+      - "1900:1900/udp"
+      - "127.0.0.1:7671:7676/udp"
+      - "127.0.0.1:12122:8876/udp"
+      - "127.0.0.1:13122:8871/tcp"
+      - "127.0.0.1:43423:8872"
   register: test3
 
 - name: check test3
