--- a/.github/workflows/podman_volume_info.yml
+++ b/.github/workflows/podman_volume_info.yml
@@ -7,6 +7,7 @@ on:
       - 'ci/*.yml'
       - 'ci/containers/podman_volume_info.yml'
       - 'plugins/modules/podman_volume_info.py'
+      - 'plugins/modules/podman_volume.py'
       - 'tests/integration/targets/podman_volume_info/**'
     branches:
       - master
@@ -16,6 +17,7 @@ on:
       - 'ci/*.yml'
       - 'ci/containers/podman_volume_info.yml'
       - 'plugins/modules/podman_volume_info.py'
+      - 'plugins/modules/podman_volume.py'
       - 'tests/integration/targets/podman_volume_info/**'
   schedule:
     - cron: 4 0 * * *  # Run daily at 0:03 UTC
