--- a/tests/integration/targets/podman_container_idempotency/tasks/main.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/main.yml
@@ -20,6 +20,9 @@
 - name: Test idempotency of volumes
   include_tasks: idem_volumes.yml
 
+- name: Test idempotency of containers in pods
+  include_tasks: idem_pods.yml
+
 - name: Test idempotency of other settings
   include_tasks: idem_all.yml
 
