Fix yaml python dep in root tests
Use different python interpretators for root and rootless tests,
as it's a problem in Ubuntu 18.

--- a/ci/playbooks/containers/podman_image_info.yml
+++ b/ci/playbooks/containers/podman_image_info.yml
@@ -4,3 +4,5 @@
   tasks:
     - include_role:
         name: podman_image_info
+      vars:
+        ansible_python_interpreter: "{{ _ansible_python_interpreter }}"
