--- a/.github/workflows/podman_container.yml
+++ b/.github/workflows/podman_container.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - '.github/workflows/podman_container.yml'
       - 'ci/*.yml'
-      - 'ci/containers/podman_container.yml'
+      - 'ci/run_containers_tests.sh'
+      - 'ci/playbooks/containers/podman_container.yml'
       - 'plugins/modules/podman_container.py'
       - 'plugins/modules/podman_container_info.py'
       - 'tests/integration/targets/podman_container/**'
@@ -15,7 +16,8 @@ on:
     paths:
       - '.github/workflows/podman_container.yml'
       - 'ci/*.yml'
-      - 'ci/containers/podman_container.yml'
+      - 'ci/run_containers_tests.sh'
+      - 'ci/playbooks/containers/podman_container.yml'
       - 'plugins/modules/podman_container.py'
       - 'plugins/modules/podman_container_info.py'
       - 'tests/integration/targets/podman_container/**'
@@ -56,6 +58,8 @@ jobs:
 
       - name: Upgrade pip and display Python and PIP versions
         run: |
+          sudo apt-get update
+          sudo apt-get install -y python*-wheel python*-yaml
           python -m pip install --upgrade pip
           python -V
           pip --version
