--- a/.github/workflows/podman_container_idem.yml
+++ b/.github/workflows/podman_container_idem.yml
@@ -3,22 +3,22 @@ name: Idempotency
 on:
   push:
     paths:
-      - '.github/workflows/podman_container.yml'
+      - '.github/workflows/podman_container_idem.yml'
       - 'ci/*.yml'
-      - 'ci/containers/podman_container.yml'
+      - 'ci/run_containers_tests.sh'
+      - 'ci/playbooks/containers/podman_container_idempotency.yml'
       - 'plugins/modules/podman_container.py'
-      - 'plugins/modules/podman_container_info.py'
-      - 'tests/integration/targets/podman_container/**'
+      - 'tests/integration/targets/podman_container_idempotency/**'
     branches:
       - master
   pull_request:
     paths:
-      - '.github/workflows/podman_container.yml'
+      - '.github/workflows/podman_container_idem.yml'
       - 'ci/*.yml'
-      - 'ci/containers/podman_container.yml'
+      - 'ci/run_containers_tests.sh'
+      - 'ci/playbooks/containers/podman_container_idempotency.yml'
       - 'plugins/modules/podman_container.py'
-      - 'plugins/modules/podman_container_info.py'
-      - 'tests/integration/targets/podman_container/**'
+      - 'tests/integration/targets/podman_container_idempotency/**'
   schedule:
     - cron: 4 0 * * *  # Run daily at 0:03 UTC
 
@@ -56,6 +56,8 @@ jobs:
 
       - name: Upgrade pip and display Python and PIP versions
         run: |
+          sudo apt-get update
+          sudo apt-get install -y python*-wheel python*-yaml
           python -m pip install --upgrade pip
           python -V
           pip --version
@@ -70,7 +72,8 @@ jobs:
             ${{ runner.os }}-
 
       - name: Install Ansible ${{ matrix.ansible-version }}
-        run: python3 -m pip install --user --force-reinstall --upgrade '${{ matrix.ansible-version }}'
+        run: |
+          python3 -m pip install --user --force-reinstall --upgrade '${{ matrix.ansible-version }}'
 
       - name: Build and install the collection tarball
         run: |
@@ -78,7 +81,7 @@ jobs:
           ~/.local/bin/ansible-galaxy collection build --output-path /tmp/just_new_collection --force
           ~/.local/bin/ansible-galaxy collection install -vvv --force /tmp/just_new_collection/*.tar.gz
 
-      - name: Run idempotency tests for podman container
+      - name: Run preparing tests for podman container
         run: |
           export PATH=~/.local/bin:$PATH
 
@@ -103,6 +106,15 @@ jobs:
           -i localhost, \
           -e ansible_connection=local \
           -e setup_python=false
+        shell: bash
 
+      - name: Run idempotency tests for podman container
+        run: |
+          export PATH=~/.local/bin:$PATH
+          if [[ '${{ matrix.ansible-version }}'  == 'git+https://github.com/ansible/ansible.git@devel' ]]; then
+            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
+          elif [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
+            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
+          fi
           TEST2RUN=podman_container_idempotency ./ci/run_containers_tests.sh
         shell: bash
