--- a/.github/workflows/podman_network_info.yml
+++ b/.github/workflows/podman_network_info.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - '.github/workflows/podman_network_info.yml'
       - 'ci/*.yml'
-      - 'ci/containers/podman_network_info.yml'
+      - 'ci/run_containers_tests.sh'
+      - 'ci/playbooks/containers/podman_network_info.yml'
       - 'plugins/modules/podman_network_info.py'
       - 'tests/integration/targets/podman_network_info/**'
     branches:
@@ -14,7 +15,8 @@ on:
     paths:
       - '.github/workflows/podman_network_info.yml'
       - 'ci/*.yml'
-      - 'ci/containers/podman_network_info.yml'
+      - 'ci/run_containers_tests.sh'
+      - 'ci/playbooks/containers/podman_network_info.yml'
       - 'plugins/modules/podman_network_info.py'
       - 'tests/integration/targets/podman_network_info/**'
   schedule:
@@ -54,6 +56,8 @@ jobs:
 
       - name: Upgrade pip and display Python and PIP versions
         run: |
+          sudo apt-get update
+          sudo apt-get install -y python*-wheel python*-yaml
           python -m pip install --upgrade pip
           python -V
           pip --version
