--- a/ci/playbooks/containers/podman_container_info.yml
+++ b/ci/playbooks/containers/podman_container_info.yml
@@ -4,3 +4,5 @@
   tasks:
     - include_role:
         name: podman_container_info
+      vars:
+        ansible_python_interpreter: "{{ _ansible_python_interpreter }}"
