--- a/ci/playbooks/containers/podman_pod.yml
+++ b/ci/playbooks/containers/podman_pod.yml
@@ -6,3 +6,4 @@
         name: podman_pod
       vars:
         idem_image: idempotency_test
+        ansible_python_interpreter: "{{ _ansible_python_interpreter }}"
