--- a/ci/playbooks/containers/podman_volume.yml
+++ b/ci/playbooks/containers/podman_volume.yml
@@ -4,3 +4,5 @@
   tasks:
     - include_role:
         name: podman_volume
+      vars:
+        ansible_python_interpreter: "{{ _ansible_python_interpreter }}"
