--- a/tests/integration/targets/podman_network/tasks/main.yml
+++ b/tests/integration/targets/podman_network/tasks/main.yml
@@ -5,6 +5,23 @@
     - name: Print podman version
       command: podman version
 
+    - name: Check if dnsname plugin is installed
+      block:
+
+        - name: Check if plugin is installed
+          stat:
+            path: "{{ item }}"
+          loop:
+            - /usr/libexec/cni/dnsname
+            - /usr/lib/cni/dnsname
+            - /opt/cni/bin/dnsname
+            - /opt/bridge/bin/dnsname
+          register: plugin_results
+
+        - name: Set plugin fact
+          set_fact:
+            dns_plugin: "{{ true in plugin_results.results|map(attribute='stat.exists') }}"
+
     - name: Generate random value for network name
       set_fact:
         network_name: "{{ 'ansible-test-podman-%0x' % ((2**32) | random) }}"
@@ -63,7 +80,9 @@
     - name: Check info
       assert:
         that:
-          - info3 is changed
+          - >-
+            info3 is changed and dns_plugin|bool or
+            info3 is not changed and not dns_plugin|bool
 
     - name: Create network with disable DNS again
       containers.podman.podman_network:
@@ -86,7 +105,9 @@
     - name: Check info
       assert:
         that:
-          - info5 is changed
+          - >-
+            info5 is changed and dns_plugin|bool or
+            info5 is not changed and not dns_plugin|bool
 
     - name: Create network with custom gateway
       containers.podman.podman_network:
