Fix signals case for podman_container
In #113 we made a change to lowercase only keys, but signals in
image info are upper case.

Fix tests - stop signal should be word, not number.
Related to #125.

--- a/tests/integration/targets/podman_container_idempotency/files/Dockerfile
+++ b/tests/integration/targets/podman_container_idempotency/files/Dockerfile
@@ -21,7 +21,7 @@ EXPOSE 80
 EXPOSE 8080/tcp
 VOLUME ["/data", "/data2"]
 USER user
-STOPSIGNAL 9
+STOPSIGNAL SIGKILL
 
 # problem with OS w/o systemd
 # HEALTHCHECK --interval=5m --timeout=3s \
