--- a/tests/integration/targets/podman_logout/tasks/main.yml
+++ b/tests/integration/targets/podman_logout/tasks/main.yml
@@ -4,6 +4,17 @@
     - name: Print podman version
       command: podman version
 
+    - name: Log out with invalid executable
+      podman_logout:
+        executable: podman_invalid
+      register: invalid_executable
+      ignore_errors: yes
+
+    - name: Check invalid executable results
+      assert:
+        that:
+          - invalid_executable is failed
+
     - name: Log out of non-existing registry
       containers.podman.podman_logout:
       register: non_existing_registry
@@ -13,6 +24,17 @@
         that:
           - "'changed' in non_existing_registry"
           - "non_existing_registry.changed == False"
+
+    - name: Log out with invalid authfile
+      podman_logout:
+        authfile: authfile_invalid.json
+      register: invalid_authfile
+      ignore_errors: yes
+
+    - name: Check invalid authfile results
+      assert:
+        that:
+          - invalid_authfile is failed
 
     - name: Log out of all registries
       containers.podman.podman_logout:
