Fix logout test for podman_logout

--- a/tests/integration/targets/podman_logout/tasks/main.yml
+++ b/tests/integration/targets/podman_logout/tasks/main.yml
@@ -4,6 +4,10 @@
     - name: Print podman version
       command: podman version
 
+    - name: Logout from docker if it exists
+      command: docker logout
+      ignore_errors: true
+
     - name: Log out with invalid executable
       containers.podman.podman_logout:
         executable: podman_invalid
